--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 										<header class="major">
 											<h2>Michaela Angela</h2>
 										</header>
-										<p>An undergraduate Cyber Security student at Binus University. I'm currently on my third year (5th semester) on college. 
-										I'm passionate to learn more and more on the Cyber Security field. I'm aspire to be part of the Blue Team. Also, I have a special interest about Digital Forensic. <br/> </br>
-										I've experienced a lot of teamwork projects and jobs. The project are mostly for my college classes. Other than that I've once experienced being a Fresmen Leader that accompany and lead freshmens on their first year. By doing all of that, increasing my soft skill such as doing communication skill, problem-solving, and leadership. I've also learnt how to work with different types of people, conducting the group to work efficiently, work under pressure, etc.
-										</br>
+										<p>An undergraduate Cyber Security student at Binus University. I'm currently in my third year (5th semester) in college. 
+										I'm passionate to learn more and more about the Cyber Security field. I aspire to be part of the Blue Team. Also, I'm interested in Digital Forensics. <br/> </br>
+										I've experienced a lot of teamwork projects and tasks. The projects are mostly for my college classes. Other than that I've once experienced being a Freshmen Leader that accompanies and leads freshmen in their first year. By doing all of that, I increased my soft skill such as communication skills, problem-solving, and leadership. I've also learned how to work with different types of people, conducting the group to work efficiently, work under pressure, etc.
+										</br> </br>
+										I always wanted to be someone that could educate the society, raising social awareness about something that's still lacking in our country. To be able to do it, I need to be well-prepared. That's where my motivation comes from.
 										
 										</p>
 										<!--<ul class="actions">
@@ -75,7 +76,7 @@
 									<li>
 										<span class="icon major style3 fa-hand-peace"></span>
 										<h3>College Courses</h3>
-										<p>I've passed Network Penetration Testing, Shell Scripting, Network Administration, Software Security, Computer Networks, Database System courses. On this semester I got Computer Forensic, Secure Programming, Server Administration courses.</p>
+										<p>I've passed Network Penetration Testing, Shell Scripting, Network Administration, Software Security, Computer Networks, Database System courses. On this semester I got Computer Forensics, Secure Programming, Server Administration courses.</p>
 									</li>
 									<!--<li>
 										<span class="icon major style5 fa-gem"></span>
@@ -86,6 +87,7 @@
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="projects.html" class="button">My Projects</a></li>
+										<li><a href="activity.html" class="button">Recent Activities</a></li>
 									</ul>
 								</footer>
 							</section>
