--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<dt>Email</dt>
 								<dd><a href="#">michaelaangelaa@gmail.com</a></dd>
 								<dt>Line</dt>
-								<dd>michaeelaangela</dd>
+								<dd>michaelaangela</dd>
 								<dt>Telegram</dt>
 								<dd>ceyyya</dd>
 							</dl>
