--- a/activity.html
+++ b/activity.html
@@ -58,7 +58,7 @@
 								<dt>Email</dt>
 								<dd><a href="#">michaelaangelaa@gmail.com</a></dd>
 								<dt>Line</dt>
-								<dd>michaeelaangela</dd>
+								<dd>michaelaangela</dd>
 								<dt>Telegram</dt>
 								<dd>ceyyya</dd>
 							</dl>
