--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 									<ul class="actions special">
 										<li><a href="projects.html" class="button">My Projects</a></li>
 										<li><a href="activity.html" class="button">Recent Activities</a></li>
+										<li><a href="tools.html" class="button">Tools & OS</a></li>
 									</ul>
 								</footer>
 							</section>
