--- a/projects.html
+++ b/projects.html
@@ -30,51 +30,64 @@
 							<section id="content" class="main">
 								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
 								<h2>Tukang Kita (Web-based Application)</h2>
-								<p>Description : </br>
+								<p><b>Course :</b> Software Engineering</br>
+								<b><u>Description</u></b></br>
 								A web-based application that is made as a platform to connect people and service providers. My team consists 5 people (including me), and I take part in front-end, design, and reporting.
 								</br> </br>
 								The backstory of the idea is our own personal experiences. It is quite hard sometimes to find some services like handyman, laundry, etc. It could take a lot of time and effort to find the convenience one. In other hand, we also thought about small/individual services that is struggling with promoting their services. That's why we made this app! ^^
 								</br> </br>
 								Here's a little preview of the app :
 								</p>
-								<span class="project"><img src="./images/tk1.png"></span>
-								<span class="project"><img src="./images/tk2.png"></span>
-								<span class="project"><img src="./images/tk3.png"></span>
-								<span class="project"><img src="./images/tk4.png"></span>
+								<div class="col-12"><span class="image fit"><img src="images/tk1.jpg" alt="" /></span></div>
+								<div class="col-12"><span class="image fit"><img src="images/tk2.jpg" alt="" /></span></div>
+								<div class="col-12"><span class="image fit"><img src="images/tk3.jpg" alt="" /></span></div>
+								<div class="col-12"><span class="image fit"><img src="images/tk4.jpg" alt="" /></span></div>
 
 
 								</br> </br>
 								<h2>Baemax (UI/UX Design)</h2>
-								<p>Description : </br>
+								<p><b>Course :</b> Aritificial Intelligence</br>
+								<b><u>Description</u></b></br>
 								A mobile-based application that used AI chatbot to be "a virtual friend" for users. By using Natural Language Processing, this chatbot could mimic an actual human and making a "real conversation" with user. This chatbot focused on motivates and give positive vibes (or quotes) to people by detecting the list of keywords that probably we would say when we're feeling down or not well.
 								</br> </br>
-								Here's the UI design :
+								Here's the UI design : 
 								</p>
-								<span class="project"><img src="./images/Intro.png"></span>
-								<span class="project"><img src="./images/Pilihan.png"></span>
-								<span class="project"><img src="./images/Chat.png"></span>
 
-								</br> </br>
+								<div class="box alt">
+                                    <div class="row gtr-uniform">
+                                        <div class="col-4"><span class="image fit"><img src="images/Intro.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/Pilihan.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/Chat.png" alt="" /></span></div>
+                                    </div>
+                                </div>													
+
+								
 								<h2>MyBook (UI Design)</h2>
-								<p>Description : </br>
+								<p><b>Course :</b> Database Systems</br>
+								<b><u>Description</u></b></br>
 								An e-commerce to buy e-books.
 								</br>
 								Here's to take a peek of this project:
 								<a href="https://www.figma.com/proto/rFNkS9l67sSVMn3sVTwI5Z/E-Commerce-UI-Kit-V1.1-(Community)?node-id=648%3A251&starting-point-node-id=648%3A251">Figma</a>
 								</p>
 
-								<h2>3S Your Skincare Needs (Application)</h2>
-								<p>Description : </br>
-								Coming soon! On-going project for Secure Programming course ^^
+								<h2>3S Your Skincare Needs (Web-based Application)</h2>
+								<p><b>Course :</b> Secure Programming</br>
+								<b><u>Description</u></b></br>
+								<i>Coming soon! On-going project^^</i>
 								</p>
 
 								<h2>XAVI (UI/UX Design)</h2>
-								<p>Description : </br>
-								An application that is made for medicine tracker and reminder. Hopefully it'll help people that are struggling with remembering their medicine schedule. On-going project for Human and Computer Interaction course ^^
+								<p><b>Course :</b> Human and Computer Interaction</br>
+								<b><u>Description</u></b></br>
+								An application that is made for medicine tracker and reminder. Hopefully it'll help people that are struggling with remembering their medicine schedule. <i>On-going project^^</i>
 								</p>
 
-							</section>
+								<a href="./index.html" class="button primary">Back to home</a>
+								</br></br>
 
+							</section>
+							
 					</div>
 
 				<!-- Footer -->
