--- a/tools.html
+++ b/tools.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>My Activity</title>
+		<title>Tools & OS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,35 +15,28 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Recent Activities</h1>
+						<h1>Tools and Operating Systems</h1>
+                        <p>This is the tools and operating systems that I've used and learned.</p>
 					</header>
 
 				<!-- Main -->
 					<div id="main">
 						<!-- Content -->
 							<section id="content" class="main">
-								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
-								<h2>CTF</h2>
-								<p>I've been practicing CTFs lately. I haven't found my specialty yet. Here's the websites that I used : <a href="https://rasyidmf.com/Users/?id=971">CTFR</a>
-                                </br>
-                                </p>
-
-                                <h2>Laporan Social Case Study: Minimnya Empati Masyarakat Indonesia Terhadap Korban Pelecehan Seksual</h2>
-								<p>
-								<a href="https://drive.google.com/file/d/1wnMjbqmtT8ow1_XLKSwShFNhkVCwRfKD/view?usp=sharing">Social Case Study</a>
-                                </br>
-                                </p>
-
-                                <h2>CEH Practical Exam Preparation</h2>
-								<p>I got the <a href="https://www.eccouncil.org/campaigns/ceh/ceh-practical-scholarship-2021/">CEH Practical scholarship</a> and will be taking the exam by next year. ^^
-                                </br>
-                                </p>
-
-                                <h2>Freshmen Leader for First Year Program B2025</h2>
-								<p>August - September 2021
-                                </br>
-                                </p>
-
+                                <div class="box alt">
+                                    <div class="row gtr-uniform">
+                                        <div class="col-2"><span class="image fit"><img src="images/hxd.png" alt="" /></span></div>
+                                        <div class="col-2"><span class="image fit"><img src="images/ftk.png" alt="" /></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images/autopsy.png" alt="" /></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images/wireshark.png" alt="" /></span></div>
+                                        <div class="col-2"><span class="image fit"><img src="images/packet.png" alt="" /></span></div>
+                                        <div class="col-2"><span class="image fit"><img src="images/kali.jpg" alt="" /></span></div>
+                                        <div class="col-2"><span class="image fit"><img src="images/windows.png" alt="" /></span></div>
+                                    </div>
+                                </div>
+                                
+                                
+                                </br></br>
                                 <a href="./index.html" class="button primary">Back to home</a>
 								</br></br>
 
