--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 							<h2>Let's connect!</h2>
 							<dl class="alt">
 								<dt>Email</dt>
-								<dd><a href="#">michaelaangelaa@gmail.com</a></dd>
+								<dd><a href="mailto:michaelaangelaa@gmail.com">michaelaangelaa@gmail.com</a></dd>
 								<dt>Line</dt>
 								<dd>michaelaangela</dd>
 								<dt>Telegram</dt>
